@@ -1,10 +1,10 @@
 package com.datastax.spark.connector.cql
 
 import java.net.InetAddress
-import scala.util.control.NonFatal
 
-import org.apache.spark.SparkConf
-import org.apache.spark.Logging
+import org.apache.spark.{Logging, SparkConf}
+
+import scala.util.control.NonFatal
 
 /** Stores configuration of a connection to Cassandra.
   * Provides information about cluster nodes, ports and optional credentials for authentication. */
@@ -49,7 +49,21 @@ object CassandraConnectorConf extends Logging {
   val CassandraMinReconnectionDelayProperty = "spark.cassandra.connection.reconnection_delay_ms.min"
   val CassandraMaxReconnectionDelayProperty = "spark.cassandra.connection.reconnection_delay_ms.max"
   val CassandraQueryRetryCountProperty = "spark.cassandra.query.retry.count"
-  val CassandraReadTimeoutProperty = "spark.cassandra.read.timeout_ms" 
+  val CassandraReadTimeoutProperty = "spark.cassandra.read.timeout_ms"
+
+  //Whitelist for allowed CassandraConnector environment variables
+  val Properties = Seq(
+    CassandraConnectionHostProperty,
+    CassandraConnectionRpcPortProperty,
+    CassandraConnectionNativePortProperty,
+    CassandraConnectionLocalDCProperty,
+    CassandraConnectionTimeoutProperty,
+    CassandraConnectionKeepAliveProperty,
+    CassandraMinReconnectionDelayProperty,
+    CassandraMaxReconnectionDelayProperty,
+    CassandraQueryRetryCountProperty,
+    CassandraReadTimeoutProperty
+  )
   
   private def resolveHost(hostName: String): Option[InetAddress] = {
     try Some(InetAddress.getByName(hostName))
